# vanguard-inductions

./: .gitignore  README.md
.github/: PULL_REQUEST_TEMPLATE.md
tasks/task1/: README.md  demo.webm
tasks/task1/arm_ik/: README.md  package.xml  setup.py
tasks/task1/arm_ik/arm_ik/: ik.py  move_arm.py
tasks/task1/arm_ik/launch/: demo.launch.py  display.launch.py
tasks/task1/arm_ik/rviz/: arm.rviz
tasks/task1/arm_ik/urdf/: arm3dof.urdf
tasks/task2/: README.md  kalman_filter.py
tasks/task3/: README.md
