<?xml version="1.0"?>
<package format="3">
  <name>arm_ik</name>
  <version>0.0.1</version>
  <description>3DOF arm with analytic inverse kinematics</description>
  <maintainer email="f20251199@hyderabad.bits-pilani.ac.in">Abhinav Pullela</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
